Add changes from deprecated repo

--- a/python/CleanupAnalysis.ipynb
+++ b/python/CleanupAnalysis.ipynb
@@ -41,6 +41,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "#exp_name = \"2021_10_07_stepper\";  # new hardware, new sweep\n",
     "exp_name = \"2021_07_08_stepper_fast\";  # new hardware, new sweep\n",
     "#exp_name = \"2021_07_08_stepper_slow\";  # new hardware, new sweep\n",
     "#exp_name = \"2021_07_27_epuck_wall\";  # new hardware, new sweep\n",
@@ -106,6 +107,7 @@
    "source": [
     "from frequency_analysis import get_spectrogram_raw\n",
     "spec, freqs = get_spectrogram_raw(data.frequencies_matrix, data.stft)\n",
+    "print(len(freqs))\n",
     "fig, ax = plt.subplots()\n",
     "for i in range(spec.shape[2]):\n",
     "    ax.scatter(freqs[freqs>0], spec[freqs>0, 0, i], label=f'sweep{i}')\n",
@@ -316,21 +318,25 @@
     "    fig.set_size_inches(3 * matrix.shape[0], 3)\n",
     "    for i in range(matrix.shape[0]):\n",
     "        plot_df_matrix(dists, freqs[freqs>0], matrix[i, freqs>0], ax=axs[i])\n",
-    "        axs[i].set_title(f\"mic{i}\")\n",
-    "        axs[i].set_ylim(2500, 4500)\n",
+    "        #axs[i].set_title(f\"mic{i}\")\n",
+    "        axs[i].set_ylim(3000, 4505)\n",
+    "        axs[i].set_xlabel('distance [cm]')\n",
     "    return fig, axs\n",
     "\n",
     "fig, axs = plot_matrices(dists, freqs, matrix)\n",
-    "axs[0].set_ylabel('raw matrix\\n frequency [Hz]')\n",
+    "axs[0].set_ylabel('frequency [Hz]')\n",
     "save_fig(fig, f'{fname}_raw_matrix.png')\n",
+    "axs[0].set_ylabel('raw matrix\\n frequency [Hz]')\n",
     "\n",
     "fig, axs = plot_matrices(dists_cleaned, freqs_cleaned, matrix_cleaned)\n",
-    "axs[0].set_ylabel('cleaned matrix\\n frequency [Hz]')\n",
+    "axs[0].set_ylabel('frequency [Hz]')\n",
     "save_fig(fig, f'{fname}_cleaned_matrix.png')\n",
+    "axs[0].set_ylabel('cleaned matrix\\n frequency [Hz]')\n",
     "\n",
     "fig, axs = plot_matrices(dists_cleaned, freqs_pruned, matrix_pruned)\n",
-    "axs[0].set_ylabel('pruned matrix\\n frequency [Hz]')\n",
-    "save_fig(fig, f'{fname}_pruned_matrix.png')"
+    "axs[0].set_ylabel('frequency [Hz]')\n",
+    "save_fig(fig, f'{fname}_pruned_matrix.png')\n",
+    "axs[0].set_ylabel('pruned matrix\\n frequency [Hz]')"
    ]
   },
   {
@@ -367,6 +373,20 @@
     "plt.legend()\n",
     "pass"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
