--- a/python/WallAnalysis.ipynb
+++ b/python/WallAnalysis.ipynb
@@ -25,7 +25,7 @@
     "\n",
     "rcParams[\"figure.max_open_warning\"] = False\n",
     "rcParams[\"font.family\"] = 'DejaVu Sans'\n",
-    "rcParams[\"font.size\"] = 12"
+    "rcParams[\"font.size\"] = 14"
    ]
   },
   {
@@ -85,11 +85,11 @@
    "outputs": [],
    "source": [
     "if PLATFORM == \"crazyflie\":\n",
-    "    exp_name = \"2021_07_08_stepper_fast\"; # new sweep, better pipeline\n",
+    "    exp_name = \"2021_07_08_stepper_fast\"; # thesis\n",
+    "    #exp_name = \"2021_10_07_stepper\"\n",
     "    motors = \"all45000\"\n",
     "    snr = 5\n",
     "else:\n",
-    "\n",
     "    exp_name = \"2021_07_27_epuck_wall\"; # new sweep, better pipeline\n",
     "    motors = \"sweep_and_move\" \n",
     "    snr = 0\n",
@@ -110,7 +110,8 @@
     "data_collector = DataCollector()\n",
     "backup_exists = data_collector.fill_from_backup(exp_name, mic_type, motors, snr)\n",
     "if not backup_exists: \n",
-    "    print('generate data using script generate_df_results.')"
+    "    print('generate data using script generate_df_results.')\n",
+    "print(data_collector.df.frequency.unique())"
    ]
   },
   {
@@ -132,6 +133,7 @@
     "\n",
     "kind = 'linear'\n",
     "df_matrix, df_dist, df_freq = data_collector.get_df_matrix()\n",
+    "print(df_freq)\n",
     "print(df_dist)\n",
     "\n",
     "# interpolation study\n",
@@ -144,7 +146,6 @@
     "    df = df.assign(magnitude_norm=df.magnitude/df.groupby('frequency').magnitude.transform('median'))\n",
     "    z_series = df.groupby(['frequency', 'distance']).magnitude_norm.median()\n",
     "    z = z_series.values\n",
-    "    print(z_series)\n",
     "    x = z_series.index.get_level_values('distance').values\n",
     "    y = z_series.index.get_level_values('frequency').values\n",
     "    interpolator2d = scipy.interpolate.interp2d(x, y, z, kind=kind)\n",
@@ -197,6 +198,7 @@
     "    #ax.set_title(f\"mic{mic_idx} original\")\n",
     "    #add_colorbar(fig, ax, im)\n",
     "    fig, ax = plt.subplots()\n",
+    "    fig.set_size_inches(10, 5)\n",
     "    im = pcolorfast_custom(ax, df_dist, df_freq, df_matrix[mic_idx])\n",
     "    ax.set_title(f\"mic{mic_idx} pruned\")\n",
     "    ax_all.plot(df_freq, np.nanmean(df_matrix[mic_idx], axis=1), label=f'mic{mic_idx}')\n",
@@ -257,7 +259,7 @@
     "    if np.any(np.isnan(slice_exp)):\n",
     "        slice_exp = fill_nans(slice_exp, df_dist)\n",
     "    slice_the = get_dist_slice_theory(f, df_dist, azimuth_deg=azimuth_deg).T\n",
-    "\n",
+    "    \n",
     "    #fig_f = plot_ffts(\n",
     "    #    slice_exp=slice_exp,\n",
     "    #    slice_the=slice_the,\n",
@@ -269,7 +271,7 @@
     "        dist=df_dist,\n",
     "    )\n",
     "    fname = f\"{exp_name}_{motors}\"\n",
-    "    if f in [2562, 3375, 4500]: # manually picked this cause it looks good\n",
+    "    if f in [2562, 3375, 4500]: # manually picked these\n",
     "        save_fig(fig_d, f'{plot_dir}/{fname}_distance_slice_{f:.0f}.pdf')"
    ]
   },
@@ -311,8 +313,9 @@
     "from inference import get_approach_angle_fft, get_gamma_distribution, get_approach_angle_cost\n",
     "from plotting_tools import plot_performance, save_fig, titles, linestyles\n",
     "from estimators import get_estimate, AngleEstimator\n",
+    "from inference import BAD_FREQ_RANGES, PLATFORM\n",
     "\n",
-    "plot_slices = True\n",
+    "plot_slices = False\n",
     "gamma_min = 10\n",
     "\n",
     "start_distances_grid = [max(df_dist)+10] #[max(df_dist) + i for i in [0, 10, 20]]\n",
@@ -334,7 +337,12 @@
     "\n",
     "labels = [\"all mics\"] + [f\"mic{m}\" for m in range(df_matrix.shape[0])] \n",
     "err_dict = {l: [np.nan]*len(df_freq) for l in labels}\n",
+    "\n",
+    "print(df_freq)\n",
     "for i, f in enumerate(df_freq):\n",
+    "    if np.any([r[0] <= f <= r[1] for r in BAD_FREQ_RANGES]):\n",
+    "        print('skipping', f)\n",
+    "        continue\n",
     "    estimator = AngleEstimator()\n",
     "\n",
     "    d_slices = fill_nans(df_matrix[:, i, :], df_dist)\n",
@@ -347,9 +355,8 @@
     "\n",
     "        if algo == \"bayes\":\n",
     "            ratios, prob_ratios = get_approach_angle_fft(d_slice, f, df_dist,\n",
-    "                                                 n_max=1000, bayes=True, reduced=False, \n",
-    "                                                factor=factor)\n",
-    "\n",
+    "                                                         n_max=2000, bayes=True, reduced=False, \n",
+    "                                                         factor=factor)\n",
     "            gammas, prob = get_gamma_distribution(deepcopy(ratios), \n",
     "                                                  deepcopy(prob_ratios))\n",
     "                                                  #factors[mic_idx])\n",
@@ -378,6 +385,7 @@
     "        if plot_slices:\n",
     "            axs[0].plot(ratios, prob_ratios)\n",
     "            axs[0].axvline(1.0, label=f'mic{mic_idx}, {algo}', color=f'C{mic_idx}', ls=linestyles[algo])\n",
+    "            axs[0].set_xlim(0, 2)\n",
     "            \n",
     "            axs[1].plot(gammas, prob)\n",
     "            axs[1].axvline(gamma, label=f'mic{mic_idx}, {algo}', color=f'C{mic_idx}', ls=linestyles[algo])\n",
@@ -388,12 +396,14 @@
     "        axs[1].set_ylabel('probability')\n",
     "        axs[1].legend()\n",
     "\n",
-    "    angles, prob = estimator.get_angle_distribution(mics_left_right=[[1, 2], [0, 3]])\n",
+    "    #angles, prob = estimator.get_angle_distribution(mics_left_right=[[1, 2], [0, 3]])\n",
+    "    angles, prob = estimator.get_angle_distribution(mics_left_right=None)\n",
     "    \n",
     "    gamma = get_estimate(angles, prob)\n",
     "    err_dict[\"all mics\"][i] = gamma - gt_gamma\n",
     "\n",
     "angles, prob = estimator_all.get_angle_distribution(mics_left_right=[[1, 2], [0, 3]])\n",
+    "angles, prob = estimator_all.get_angle_distribution(mics_left_right=None)\n",
     "ax_total.plot(angles, prob, label=algo)\n",
     "\n",
     "fname = f\"{exp_name}_{motors}\"\n",
@@ -402,7 +412,7 @@
     "max_err = 90 #45\n",
     "axs[1].set_xlim(0,  max_err)\n",
     "axs[0].set_ylim(-max_err, max_err)\n",
-    "save_fig(fig, f'{plot_dir}/{fname}_{algo}_distance_slice_performance.pdf')\n",
+    "#save_fig(fig, f'{plot_dir}/{fname}_{algo}_distance_slice_performance.pdf')\n",
     "\n",
     "ax_total.legend()"
    ]
@@ -482,6 +492,7 @@
     "    #'calibration-offline-old': calib_function_old,\n",
     "}\n",
     "\n",
+    "print(df_freq)\n",
     "df_theory_pruned = get_df_theory(df_freq, df_dist)\n",
     "\n",
     "for j, (key, method) in enumerate(method_dict.items()):\n",
@@ -513,8 +524,8 @@
    "source": [
     "from plotting_tools import plot_df_matrix, save_fig, titles\n",
     "\n",
-    "min_freq = 3100 #min(df_freq)\n",
-    "max_freq = 5000 #max(df_freq)\n",
+    "min_freq = min(df_freq) #3100 #min(df_freq)\n",
+    "max_freq = max(df_freq) #5000 #max(df_freq)\n",
     "\n",
     "min_value = None\n",
     "max_value = None\n",
@@ -604,14 +615,11 @@
     "chosen_mics = range(4) #[0, 1, 3] #range(4)\n",
     "n_mics = len(chosen_mics)\n",
     "\n",
-    "use_uniform_prior = False\n",
+    "use_uniform_prior = True\n",
     "\n",
     "context = Context.get_platform_setup()\n",
-    "distances = context.get_possible_distances() * 1e2 #np.arange(50) \n",
-    "distances_grid_m = distances * 1e-2\n",
+    "distances_grid_m = context.get_possible_distances() #np.arange(50) \n",
     "distance_estimators = {}\n",
-    "\n",
-    "print(df_dist)\n",
     "\n",
     "with progressbar.ProgressBar(max_value=len(df_dist)) as p:\n",
     "    for i_d, distance in enumerate(df_dist):\n",
@@ -640,7 +648,10 @@
     "            inf_machine.add_calibration_function(normalize_method)\n",
     "                \n",
     "            for i_mic, mic_idx in enumerate(chosen_mics):\n",
-    "                distances_bayes, proba_bayes_norm, diff_bayes = inf_machine.do_inference(algorithm=\"bayes\", mic_idx=i_mic)\n",
+    "                distances_bayes, proba_bayes_norm, diff_bayes = inf_machine.do_inference(\n",
+    "                    algorithm=\"bayes\", \n",
+    "                    mic_idx=i_mic\n",
+    "                )\n",
     "                \n",
     "                for algo in [\"cost\", \"bayes\"]:\n",
     "                    distances_here, proba, diff = inf_machine.do_inference(algorithm=algo, mic_idx=i_mic)\n",
@@ -659,7 +670,6 @@
     "        for method, distance_estimator in distance_estimators.items():\n",
     "            azimuth_deg_here = None if use_uniform_prior else azimuth_deg\n",
     "            distances_here, proba = distance_estimator.get_distance_distribution(\n",
-    "                method='sum',\n",
     "                distances_m=distances_grid_m,\n",
     "                azimuth_deg=azimuth_deg_here)\n",
     "            d = get_estimate(distances_here, proba) * 1e2\n",
@@ -671,12 +681,10 @@
     "                'algorithm': 'bayes-combination'\n",
     "            }\n",
     "\n",
-    "            \n",
     "            # angle distribution doesn't work with uniform prior!\n",
     "            # this is normal, there is no information on angle without some distance information.\n",
-    "            distance_m_here = d * 1e-2\n",
+    "            distance_m_here = distance * 1e-2\n",
     "            angles_here, proba = distance_estimator.get_angle_distribution(\n",
-    "                method='sum',\n",
     "                distance_estimate_m=distance_m_here,\n",
     "                azimuths_deg=np.arange(360))\n",
     "            a = get_estimate(angles_here, proba)\n",
@@ -697,7 +705,7 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {
-    "scrolled": true
+    "scrolled": false
    },
    "outputs": [],
    "source": [
@@ -718,7 +726,7 @@
     "        fig, axs = plot_performance(absolute_err, xs=df_dist, xlabel=\"distance [cm]\", ylabel=\"error [cm]\")\n",
     "        axs[0].grid()\n",
     "        #fig.suptitle(f'microphone: {mic}') #', {titles[key]}')\n",
-    "        axs[1].set_xlim(-1, max(distances))\n",
+    "        axs[1].set_xlim(-1, max(distances_grid_m * 1e2))\n",
     "        \n",
     "        fname_here = f\"{plot_dir}/{fname}_{key}_mic{mic}_frequency_performance.png\"\n",
     "        save_fig(fig, fname_here)"
@@ -736,12 +744,9 @@
     "    for mic, df_mic in df.groupby(\"mic\"):\n",
     "        absolute_err = pd.pivot_table(df_mic, index=\"distance\", values=\"error\", columns=\"method\")\n",
     "        \n",
-    "        # TODO: need to figure out if we need to replace df_dist below by distance again.\n",
-    "        # that's what it was for stepper motor results\n",
     "        fig, axs = plot_performance(absolute_err, \n",
     "                                    xs=df_dist, xlabel=\"distance [cm]\", ylabel=\"error [deg]\")\n",
     "        axs[0].grid()\n",
-    "        #fig.suptitle(f'microphone: {mic}, {titles[key]}')\n",
     "        \n",
     "        fname_here = f\"{plot_dir}/{fname}_{key}_mic{mic}_frequency_performance.png\"\n",
     "        save_fig(fig, fname_here)"
@@ -798,10 +803,13 @@
     "        inf_machine.add_calibration_function(normalize_method)\n",
     "\n",
     "        for i_mic, mic_idx in enumerate(chosen_mics):\n",
-    "            distances_bayes, proba_bayes_norm, diff_bayes = inf_machine.do_inference(algorithm=\"bayes\", mic_idx=i_mic)\n",
+    "            distances_bayes, proba_bayes_norm, diff_bayes = inf_machine.do_inference(\n",
+    "                algorithm=\"bayes\", \n",
+    "                mic_idx=i_mic\n",
+    "            )\n",
     "            \n",
     "            inf_machine.plot(i_mic=i_mic, ax=axs_slice[i_mic], label=method, standardize=True,\n",
-    "                             ls=all_linestyles[i_method])\n",
+    "                             ls=all_linestyles[i_method])#marker='o')\n",
     "\n",
     "            distance_estimators[method].add_distribution(\n",
     "                diff_bayes * 1e-2, proba_bayes_norm, mic_idx\n",
@@ -813,7 +821,7 @@
     "                eps_normalize(proba_bayes_norm, eps=eps),\n",
     "                color=f\"C{i_method}\",\n",
     "                ls=all_linestyles[i_method],\n",
-    "                label=method\n",
+    "                label=method,\n",
     "            )\n",
     "            axs_algo[i_mic].axvline(x=d, color=f\"C{i_method}\", ls=\":\") \n",
     "            axs_algo[i_mic].set_title(f\"mic{mic_idx}\")\n",
@@ -845,7 +853,7 @@
     "            azimuth_deg=azimuth_deg_here, distances_m=distances_grid_m, verbose=False\n",
     "        )\n",
     "        ax_combi.plot(\n",
-    "            distances,\n",
+    "            distances_m*1e2,\n",
     "            eps_normalize(proba, eps=eps),\n",
     "            color=f\"C{i_method}\",\n",
     "            ls=all_linestyles[i_method],\n",
@@ -863,7 +871,8 @@
     "        distance_estimators.items()\n",
     "    ):\n",
     "\n",
-    "        distance_m_here = None if use_uniform_prior else distance * 1e-2\n",
+    "        # doesn't work with uniform prior!!\n",
+    "        distance_m_here = d * 1e-2\n",
     "        angles, proba = distance_estimator.get_angle_distribution(\n",
     "            distance_estimate_m=distance_m_here,\n",
     "            azimuths_deg=np.arange(360),\n",
