Start plane factor graph example

--- a/python/factor_graph/GTSAM.ipynb
+++ b/python/factor_graph/GTSAM.ipynb
@@ -230,63 +230,208 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# create plane measurement setup\n",
+    "def get_angles(unit_vector, verbose=False):\n",
+    "    azimuth = np.arctan2(unit_vector[1], unit_vector[0]) * 180 / np.pi\n",
+    "    elevation = np.arcsin(unit_vector[2]) * 180 / np.pi\n",
+    "    if verbose:\n",
+    "        print(f\"angles: azimuth={azimuth:.0f}deg, elevation={elevation:.0f}deg\")\n",
+    "    return azimuth, elevation\n",
+    "\n",
+    "def print_plane(label, plane):\n",
+    "    print(f\"{label} distance: {plane.distance():.2f}\", end=\"\\t\")\n",
+    "    normal = plane.normal().point3()\n",
+    "    #print(f\"{label} normal:\", normal)\n",
+    "    get_angles(normal, verbose=True)\n",
+    "    \n",
+    "# below are to be moved to OrientedPlane\n",
+    "def transformFrom(wTr, plane_r):\n",
+    "    \"\"\" coordinates of plane_r in world coordinates w, given wTr. \"\"\"\n",
+    "    n_ = plane_r.normal()\n",
+    "    d_ = plane_r.distance()\n",
+    "    w_n = wTr.rotation().rotate(n_.point3())\n",
+    "    w_d = d_ + wTr.translation().dot(w_n)\n",
+    "    return Plane(n=Unit3(w_n), d=w_d)\n",
+    "\n",
+    "def transformTo(wTr, plane_w):\n",
+    "    \"\"\" coordinates of plane_w in local coordinates r, given wTr. \"\"\"\n",
+    "    n_ = plane_w.normal()\n",
+    "    d_ = plane_w.distance()\n",
+    "    r_n = wTr.rotation().inverse().rotate(n_.point3()) # normal in local frame\n",
+    "    r_d = d_ - wTr.translation().dot(n_.point3())\n",
+    "    return Plane(n=Unit3(r_n), d=r_d)\n",
+    "\n",
+    "# TODO: need functions to\n",
+    "# - calculate bearing to a plane\n",
+    "# - calculate range to a plane\n",
+    "# just like Pose3.bearing(Pose3) or Pose3.range(pose3)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# understand the plane object\n",
     "from gtsam import Unit3, Pose2\n",
     "from gtsam import OrientedPlane3 as Plane\n",
     "\n",
     "X = symbol_shorthand.X\n",
     "P = symbol_shorthand.P\n",
     "\n",
-    "# velocity \n",
-    "v = [0, 0.1, 0]; sigma_v = 0.01 # m/s\n",
-    "w = [0, 0, 0]; sigma_w = 5 * np.pi / 180 # rad/s (roll, pitch, yaw)\n",
+    "estimate = Values()\n",
+    "plane = Plane(n=Unit3([0.0, 1.0, 0]), d=0.5) # in world coordinates\n",
+    "estimate.insert(P(0), plane)\n",
     "\n",
-    "poses = []\n",
-    "planes_local = []\n",
+    "# first pose at origin\n",
+    "pose0 = Pose3(r=Rot3.Ypr(0.0, 0.0, 0.0), t=Point3(0.0, 0.0, 0.0))\n",
+    "estimate.insert(X(0), pose0)\n",
+    "print_plane(\"initial\", plane)\n",
     "\n",
-    "# pose\n",
-    "R = Rot3()\n",
-    "t = Point3(0.0, 0.0, 0.0)\n",
-    "pose_t = Pose3(r=R, t=t)   \n",
+    "# first t, then r!\n",
+    "pose_delta = Pose3(r=Rot3.Ypr(np.pi/6, 0, 0), t=Point3(0.0, 0.2, 0.0))#, t=Point3(0.0, 0.1, 0.0))\n",
+    "pose1 = pose0 * pose_delta\n",
+    "estimate.insert(X(1), pose1)\n",
+    "plane2 = transformTo(pose1, plane)\n",
+    "print_plane(\"second\", plane2)\n",
     "\n",
-    "# plane\n",
-    "d_0 = 1.0\n",
-    "n_0 = [0, 1.0, 0]\n",
-    "unit_0 = Unit3(n_0) # unit vector\n",
-    "plane_t = Plane(n=unit_0, d=d_0) # one meter\n",
+    "pose_delta = Pose3(r=Rot3.Ypr(-np.pi/6, 0, 0), t=Point3(0.0, 0.0, 0.0))#, t=Point3(0.0, 0.1, 0.0))\n",
+    "pose2 = pose1 * pose_delta\n",
+    "estimate.insert(X(2), pose2)\n",
+    "plane3 = transformTo(pose2, plane)\n",
+    "print_plane(\"third\", plane3)\n",
     "\n",
-    "planes_local.append(plane_t)\n",
-    "poses.append(pose_t)\n",
+    "pose_delta = Pose3(r=Rot3.Ypr(-np.pi/6, 0, 0), t=Point3(0.0, -0.2, 0.0))#, t=Point3(0.0, 0.1, 0.0))\n",
+    "pose3 = pose2 * pose_delta\n",
+    "estimate.insert(X(3), pose3)\n",
+    "plane4 = transformTo(pose3, plane)\n",
+    "print_plane(\"third\", plane4)\n",
     "\n",
     "fig = plt.figure(0)\n",
     "fig.set_size_inches(10, 10)\n",
+    "plot.plot_trajectory(0, estimate, axis_length=0.1)\n",
+    "plot.set_axes_equal(0)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "np.random.seed(1)\n",
+    "\n",
+    "X = symbol_shorthand.X\n",
+    "P = symbol_shorthand.P\n",
+    "\n",
+    "# velocity \n",
+    "v = np.array([0, 0.1, 0]); sigma_v = 0.01 # m/s\n",
+    "w = np.array([0, 0, 0]); sigma_w = 5 * np.pi / 180 # rad/s (roll, pitch, yaw)\n",
+    "\n",
+    "poses = []\n",
+    "poses_noiseless = []\n",
+    "measurements = {}\n",
+    "\n",
+    "# plane\n",
+    "plane = Plane(n=Unit3([0, 1.0, 0]), d=1.0) # one meter\n",
+    "print_plane(\"initial\", plane)\n",
+    "\n",
+    "# initial pose\n",
+    "pose_t = Pose3(r=Rot3(), t=Point3(0.0, 0.0, 0.0))\n",
+    "pose_t_noiseless = pose_t\n",
+    "\n",
+    "w_delta = w * delta_t\n",
+    "pose_delta_noiseless = Pose3(r=Rot3.Ypr(*w_delta), t=Point3(v * delta_t))\n",
+    "\n",
+    "poses.append(pose_t)\n",
+    "poses_noiseless.append(pose_t_noiseless)\n",
     "\n",
     "delta_t = 1\n",
+    "\n",
+    "estimate = Values()\n",
+    "estimate.insert(P(1), plane)\n",
+    "estimate.insert(X(0), pose_t)\n",
+    "\n",
     "for t in range(5):\n",
     "    v_noisy = delta_t * (v + np.random.normal(size=len(v), scale=sigma_v))\n",
     "    w_noisy = delta_t * (w + np.random.normal(size=len(w), scale=sigma_w))\n",
     "    \n",
-    "    R_delta = Rot3.Ypr(*w_noisy)\n",
-    "    t_delta = Point3(v_noisy)\n",
-    "    pose_delta = Pose3(r=R_delta, t=t_delta)\n",
+    "    pose_delta = Pose3(r=Rot3.Ypr(*w_noisy), t=Point3(v_noisy))\n",
     "    \n",
+    "    pose_t_noiseless = pose_delta_noiseless * pose_t_noiseless\n",
     "    pose_t = pose_delta * pose_t\n",
-    "    plane_t = plane_t.transform(pose_delta.inverse())\n",
-    "    print(\"new distance:\", plane_t.distance())\n",
+    "    poses.append(pose_t)\n",
+    "    poses_noiseless.append(pose_t_noiseless)\n",
     "    \n",
-    "    R = R * R_delta\n",
-    "    t = t + t_delta\n",
+    "    estimate.insert(X(t + 1), pose_t)\n",
     "    \n",
-    "    estimate = Values()\n",
-    "    estimate.insert(X(1), pose_t)\n",
-    "    estimate.insert(P(1), plane_t)\n",
+    "    plane_local = transformTo(pose_t, plane)\n",
+    "    print_plane(t, plane_local)\n",
+    "    \n",
+    "    azimuth, elevation = get_angles(plane_local.normal().point3())\n",
+    "    distance = plane_local.distance()\n",
+    "    \n",
+    "    measurements[t] = {'distance': distance, 'azimuth':azimuth, 'elevation':elevation}\n",
     "\n",
-    "    # TODO(continue here) plotting absolute wall normals doesn't make sense, should anchor them\n",
-    "    # to current estimate! \n",
-    "    plot.plot_trajectory(0, estimate, axis_length=0.2)\n",
+    "fig = plt.figure(0)\n",
+    "fig.set_size_inches(10, 10)\n",
+    "plot.plot_trajectory(0, estimate, axis_length=0.2)\n",
     "plot.set_axes_equal(0)\n",
     "plt.gca().view_init(elev=0., azim=0)\n",
+    "plt.title(\"side view\")\n",
+    "plt.show()\n",
+    "\n",
+    "fig = plt.figure(1)\n",
+    "fig.set_size_inches(10, 10)\n",
+    "plot.plot_trajectory(1, estimate, axis_length=0.2)\n",
+    "plot.set_axes_equal(1)\n",
+    "plt.gca().view_init(elev=90., azim=0)\n",
+    "plt.title(\"top view\")\n",
     "plt.show()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from gtsam import PriorFactorOrientedPlane3 # is created automatically!\n",
+    "\n",
+    "# Create and solve factor graph for above example\n",
+    "initial_estimate = Values()\n",
+    "initial_estimate.insert(P(0), plane)\n",
+    "for i, pose in enumerate(poses_noiseless):\n",
+    "    initial_estimate.insert(X(i), pose)\n",
+    "    \n",
+    "pose_noise = gtsam.noiseModel.Isotropic.Sigma(6, 0.01)\n",
+    "\n",
+    "graph = NonlinearFactorGraph()\n",
+    "\n",
+    "factor = PriorFactorPose3(X(0), poses[0], pose_noise)\n",
+    "graph.push_back(factor)\n",
+    "\n",
+    "plane_noise = gtsam.noiseModel.Diagonal.Sigmas([0.785398163, 0.785398163, 5])\n",
+    "factor = PriorFactorOrientedPlane3(P(0), plane, plane_noise)\n",
+    "graph.push_back(factor)\n",
+    "\n",
+    "for i, meas in enumerate(measurements.values()):\n",
+    "    distance = meas['distance']\n",
+    "    azimuth = meas['azimuth'] / 180 * np.pi\n",
+    "    elevation = meas['elevation'] / 180 * np.pi\n",
+    "    \n",
+    "    # TODO(continue here): convert below to actual plane factors\n",
+    "    #x1_p3_noise = gtsam.noiseModel.Isotropic.Sigma(3, 0.0451801);\n",
+    "    #factor = PlaneFactor(p2_meas.planeCoefficients(), x1_p2_noise, X(1), P(2))\n",
+    "    #graph.push_back(factor)\n",
+    "\n",
+    "params = gtsam.DoglegParams()\n",
+    "params.setVerbosity('')\n",
+    "optimizer = DoglegOptimizer(graph, initial_estimate, params)\n",
+    "print('Optimizing:')\n",
+    "result = optimizer.optimize()\n",
+    "print('initial error = {}'.format(graph.error(initial_estimate)))\n",
+    "print('final error = {}'.format(graph.error(result)))"
    ]
   },
   {
@@ -302,7 +447,6 @@
     "from gtsam import NonlinearFactorGraph\n",
     "from gtsam import Values\n",
     "from gtsam import Pose3, Rot3, Point3\n",
-    "from gtsam import PriorFactorOrientedPlane3 # is created automatically!\n",
     "\n",
     "X = symbol_shorthand.X # Pose3 (x, y, z, r, p, y)\n",
     "P = symbol_shorthand.P # Plane \n",
